fixing swagger and remove stub file
